syntax = "proto3";
package candy.meta;

option go_package = "meta";

import "common.proto";

service NoticeService {
    rpc Subscribe(SubscribeRequest) returns (SubscribeResponse);
    rpc UnSubscribe(UnSubscribeRequest) returns (UnSubscribeResponse);

    rpc Push(PushRequest) returns (PushResponse);

}


message SubscribeRequest {
    int64 ID = 1;
    string host = 2;
}

message SubscribeResponse {
    ResponseHeader header = 1;
}

message UnSubscribeRequest {
    int64 ID = 1;
    string host = 2;
}

message UnSubscribeResponse {
    ResponseHeader header = 1;
}

message PushRequest {
    repeated PushID ID = 1;
    PushMessage Msg = 2;
}

message PushResponse {
    ResponseHeader header = 1;
}
